tests/fixtures/errors/E0903_bundle_destructure_duplicate.mimz
// expect: E0903
bundle Hs { valid: bit, ready: bit }
module Top {
  in bus: Hs
  let { valid, valid } = bus
}
